[package]
name = "pngstd"
authors = [ "Maximilian Wende <dasisdormax@mailbox.org>" ]
description = "Improve PNG file compression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3.0", features = ["derive"] }
flate2 = "^1.0"
crc32fast = "^1.3"
zstd = "^0.10"